<resources>
    <string name="app_name">怀阳高速</string>
    <string name="string_app_name">风险管控系统</string>
    <string name="string_version">风险管控系统</string>
    <string name="string_login_UserNameHint">账号</string>
    <string name="string_login_PassWordHint">密码</string>
    <string name="string_login_RememberPassword">记住密码</string>
    <string name="string_login_ModifyPassword">修改密码</string>
    <string name="string_login_Bt">登录</string>
    <string name="string_login_BtReset">重&#160;&#160;&#160;置</string>
    <string name="string_forget_pwd">Forgot password?</string>
    <string name="string_home_actionbar_center">风险管控系统</string>
    <string name="string_singIn">巡查签到</string>
    <string name="string_message">检查记录</string>
    <string name="string_other">其他</string>
    <string name="string_mine">我的</string>
    <string name="string_message_title">整改通知列表</string>
    <string name="string_log_admin">重大风险源管理</string>
    <string name="string_risk_admin">风险源管理</string>
    <string name="string_disclosure">安全交底</string>
    <string name="string_login_text">登录</string>
    <string name="string_userprofile">个人资料</string>
    <string name="string_userLog">用户日志</string>
    <string name="string_update_online">在线升级</string>
    <string name="string_settings">设置</string>
    <string name="string_logout">注销</string>
    <string name="string_modifyPassWord_Old">输入旧密码</string>
    <string name="string_modifyPassWord_New">输入新密码</string>
    <string name="string_modifyPassWord_ReNew">再次输入新密码</string>
    <string name="string_modifyPassWord_hint">6-16个字符，区分大小写，不能为8位以下纯数字</string>
    <string name="string_modifyPassWord_Ok">确认修改</string>
    <string name="string_back">返回</string>
    <string name="string_modifyPassWord">修改密码</string>
    <string name="string_user_profile_title">个人资料</string>
    <string name="string_modifyUserName_title">修改姓名</string>
    <string name="string_modifyAddress_title">修改地址</string>
    <string name="string_modifyQQ_title">修改QQ</string>
    <string name="string_modifyEmail_title">修改Email</string>
    <string name="string_modifyUserPhone_title">修改电话号码</string>
    <string name="string_modifyUserName_Hint">输入新的名字</string>
    <string name="string_modifyAddress_Hint">输入新的地址</string>
    <string name="string_modifyEmail_Hint">输入新的邮箱</string>
    <string name="string_modifyQQ_Hint">输入新的QQ</string>
    <string name="string_modifyUserPhone_Hint">输入新的电话号码</string>
    <string name="string_save">保存</string>
    <string name="string_riskType">风险点类型：</string>
    <string name="string_RiskID">风险源编号：</string>
    <string name="string_RiskIdentity">风险源标识：</string>
    <string name="string_SlopeType">边&#160;&#160;坡&#160;类&#160;型：</string>
    <string name="string_protectionMethod">防&#160;&#160;护&#160;方&#160;式：</string>
    <string name="string_slopeMaxHeight">边坡最大高度：</string>
    <string name="string_slopeMaxWidth">边坡最大宽度：</string>
    <string name="string_bridgeName">桥&#160;&#160;&#160;&#160;梁&#160;&#160;&#160;&#160;名：</string>
    <string name="string_tunnelName">隧&#160;&#160;&#160;&#160;道&#160;&#160;&#160;&#160;名：</string>
    <string name="string_soilCount">取&#160;&#160;&#160;&#160;土&#160;&#160;&#160;&#160;数：</string>
    <string name="string_sender">发&#160;&#160;&#160;&#160;送&#160;&#160;&#160;&#160;方：</string>
    <string name="string_slopeLength">边&#160;&#160;坡&#160;长&#160;度：</string>
    <string name="string_get_soil_height">取&#160;&#160;土&#160;高&#160;度：</string>
    <string name="string_set_soil_height">填&#160;&#160;土&#160;高&#160;度：</string>
    <string name="string_tunnelLength">隧&#160;&#160;道&#160;长&#160;度：</string>
    <string name="string_designSpeed">设&#160;&#160;计&#160;速&#160;度：</string>
    <string name="string_centerStakeNum">中&#160;&#160;心&#160;桩&#160;号：</string>
    <string name="string_holeCount">孔&#160;&#160;数&#160;孔&#160;径：</string>
    <string name="string_bridgeLength">桥&#160;&#160;梁&#160;全&#160;长：</string>
    <string name="string_bridgePierHeight">最&#160;&#160;大&#160;墩&#160;高：</string>
    <string name="string_topStru">上&#160;&#160;部&#160;结&#160;构：</string>
    <string name="string_bottomStru">下&#160;&#160;部&#160;结&#160;构：</string>
    <string name="string_HandleLength">处&#160;&#160;理&#160;长&#160;度：</string>
    <string name="string_HandleWidth">处&#160;&#160;理&#160;宽&#160;度：</string>
    <string name="string_HandleProgram">处&#160;&#160;理&#160;方&#160;案：</string>
    <string name="string_series">级&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数：</string>
    <string name="string_thickness">厚&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="string_placeName">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="string_type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型：</string>
    <string name="string_lenght">长&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="string_road">路&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;段：</string>
    <string name="string_area">占&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;地：</string>
    <string name="string_time">时&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;间：</string>
    <string name="string_receiverMan">&#160;接&#160;&#160;&#160;收&#160;&#160;&#160;&#160;人：</string>
    <string name="string_soil_cube">&#160;挖&#160;&#160;&#160;方&#160;&#160;&#160;&#160;量：</string>
    <string name="string_SendMan">&#160;发&#160;&#160;&#160;送&#160;&#160;&#160;&#160;人：</string>
    <string name="string_roadSection">路&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;段：</string>
    <string name="string_clearHeight">净&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;高：</string>
    <string name="string_clearWidth">净&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;宽：</string>
    <string name="string_form">形&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;式：</string>
    <string name="string_stakeNum">桩&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="string_Section">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;段：</string>
    <string name="string_SeriesNum">序&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="string_submit">提交发送</string>
    <string name="string_draft">保存草稿</string>
    <string name="string_pass">通过</string>
    <string name="string_reject">驳回</string>
    <string name="string_submitter">工&#160;程&#160;角&#160;色&#160;：</string>
    <string name="string_logstate">通&#160;知&#160;状&#160;态&#160;：</string>
    <string name="string_logtype">通&#160;知&#160;类&#160;型&#160;：</string>
    <string name="string_query">查询</string>
    <string name="string_query_self">浏览自己的日志</string>
    <string name="string_queryAll">浏览全部</string>
    <string name="string_newPatrolLogid">日&#160;&#160;志&#160;编&#160;号:</string>
    <string name="string_newnotifyid">回&#160;&#160;复&#160;编&#160;号:</string>
    <string name="string_newnoitfyid">下&#160;&#160;达&#160;编&#160;号:</string>
    <string name="string_ID">编&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="string_newPatrolLogName">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称：</string>
    <string name="string_newPatrolAccount">用&#160;&#160;户&#160;帐&#160;号：</string>
    <string name="string_smID">S&#160;&#160;&#160;&#160;M&#160;&#160;&#160;I&#160;&#160;&#160;D：</string>
    <string name="string_newLogCreatedTime">创&#160;&#160;建&#160;时&#160;间：</string>
    <string name="string_startEndStakeNum">起&#160;&#160;讫&#160;桩&#160;号：</string>
    <string name="string_reFormTime">整&#160;&#160;改&#160;时&#160;间：</string>
    <string name="string_startTime">起&#160;&#160;始&#160;日&#160;期：</string>
    <string name="string_endTime">终&#160;&#160;止&#160;日&#160;期：</string>
    <string name="string_startTimehint">选择起始日期&#160;&#160;</string>
    <string name="string_endTimehint">选择终止日期&#160;&#160;</string>
    <string name="string_newLogWeather">天&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;气：</string>
    <string name="string_Grade">评&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;分：</string>
    <string name="string_emergency">安&#160;&#160;全&#160;隐&#160;患：</string>
    <string name="string_inspector">巡&#160;&#160;查&#160;人&#160;员：</string>
    <string name="string_leader">施工单位负责人：</string>
    <string name="string_posibility">发生可能性等级：</string>
    <string name="string_seriousness">后果严重性等级：</string>
    <string name="string_patrolConstruct">巡查下达指令：</string>
    <string name="string_patrolNotification">巡查下达通知：</string>
    <string name="string_workload">巡查工作量：</string>
    <string name="string_recorder">安&#160;&#160;&#160;&#160;全&#160;&#160;&#160;&#160;员：</string>
    <string name="string_recorder3">记&#160;&#160;&#160;&#160;录&#160;&#160;&#160;&#160;员：</string>
    <string name="string_supervivisor">监&#160;&#160;&#160;&#160;理&#160;&#160;&#160;&#160;方：</string>
    <string name="string_owner">业&#160;&#160;&#160;&#160;主&#160;&#160;&#160;&#160;方：</string>
    <string name="string_construction">施&#160;&#160;&#160;&#160;工&#160;&#160;&#160;&#160;方：</string>
    <string name="string_copy">抄&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;送：</string>
    <string name="string_receiveMan">接&#160;&#160;&#160;&#160;收&#160;&#160;&#160;&#160;人：</string>
    <string name="string_reFormUser">整&#160;&#160;改&#160;账&#160;户：</string>
    <string name="string_color">颜&#160;&#160;色&#160;标&#160;识：</string>
    <string name="string_Title">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题：</string>
    <string name="string_reFormDetail">详&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;情：</string>
    <string name="string_picture">照&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;片：</string>
    <string name="string_close">返回</string>
    <string name="string_signin">巡查签到</string>
    <string name="string_send">发送</string>
    <string name="string_new_notification">新建通知</string>
    <string name="string_choose_date">选择日期</string>
    <string name="string_relationship_hint">点 击 选 取,长 按 查 看</string>
    <string name="string_add_attachment">添 加 附 件 ：</string>
    <string name="string_content">内容：</string>
    <string name="string_bridge">桥梁</string>
    <string name="string_service">服务区</string>
    <string name="string_special_soil">特殊土路基</string>
    <string name="string_low_fill">低填浅埋</string>
    <string name="string_risk_index">风险源编号：</string>
    <string name="string_check_unit">检&#160;&#160;查&#160;单&#160;位:</string>
    <string name="string_be_check_unit">受&#160;&#160;检&#160;单&#160;位:</string>
    <string name="string_check_date">检&#160;&#160;查&#160;日&#160;期:</string>
    <string name="string_reform_date">整&#160;&#160;改&#160;日&#160;期:</string>
    <string name="string_check_content"> 检 查 内 容:</string>
    <string name="string_check_find_problem">检查发现问题:</string>
    <string name="string_reform_measure_ask">整改措施与要求:</string>
    <string name="string_check_man"> 主&#160;&#160;检&#160;&#160;查&#160;&#160;人：</string>
    <string name="string_check_mans">副&#160;&#160;检&#160;&#160;查&#160;&#160;人：</string>
    <string name="string_reform_deadline">整&#160;&#160;改&#160;期&#160;限:</string>
    <string name="string_be_check_section">受&#160;&#160;检&#160;标&#160;段:</string>
    <string name="string_signature"> 签  名:</string>
    <string name="string_reform_condition"> 整 改 情 况:</string>
    <string name="string_reform_recheck">复核:</string>
    <string name="string_reform_man"> 整&#160;&#160;&#160;&#160;改&#160;&#160;&#160;人:</string>
    <string name="string_notification_hint">请填写通知内容（包括“一般质量问题”，“一般安全问题”和需提注意的其它事项）。</string>
</resources>