<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleBarLayout"
        style="@style/TitleBarStyle">

        <TextView
            android:id="@+id/tvClose"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@mipmap/ic_btn_return"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_big_plus2"/>

        <TextView
            android:id="@+id/tvTitles"
            style="@style/TitleBarStyleMiddleText"
            android:text="@string/string_new_notification"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/CustomLayoutLeftText"
                android:text="@string/string_Title"/>

            <EditText
                android:id="@+id/edtTitle"
                style="@style/CustomLayoutEditTextNewNews"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvType"
                style="@style/CustomLayoutLeftText"
                android:text="@string/string_type"/>

            <EditText
                android:id="@+id/edtType"
                style="@style/CustomLayoutEditTextNewNews"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvTime"
                style="@style/CustomLayoutLeftText"
                android:text="@string/string_time"/>

            <TextView
                android:id="@+id/edtTime"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:hint="@string/string_choose_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvReceiveMan"
                style="@style/CustomLayoutLeftText"
                android:text="@string/string_receiverMan"/>

            <EditText
                android:editable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/string_relationship_hint"
                android:id="@+id/edtReceiveMan"
                style="@style/CustomLayoutEditTextNewNews"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvAddFile"
                style="@style/CustomLayoutLeftText"
                android:text="@string/string_add_attachment"/>


            <TextView
                android:id="@+id/tvFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableRight="@mipmap/ic_add_3"/>


        </LinearLayout>


        <include layout="@layout/separate_line_h"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvRecvCUnit"
                style="@style/CustomLayoutLeftText"
                android:text="@string/string_content"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edtContent"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:gravity="left"
                    android:hint="@string/string_notification_hint"
                    android:lineSpacingExtra="10dp"
                    android:textSize="@dimen/textsize_title"/>
            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_btn_orange_blue"
            android:text="@string/string_send"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_title"/>


    </LinearLayout>

</LinearLayout>
