<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_orange_blue"
            android:text="@string/string_query"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btnQueryAll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_btn_orange_blue"
            android:text="@string/string_queryAll"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btnQuerySelf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selector_btn_orange_blue"
            android:text="@string/string_query_self"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</RelativeLayout>
