<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/customNewLogLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    <!--android:background="@color/colorLightGrey"-->

    <RelativeLayout
        android:id="@+id/titleBarLayout"
        style="@style/TitleBarStyle">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@mipmap/ic_btn_return"
            />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleBarStyleMiddleText"
            android:text="@string/string_bridge"
            />

        <TextView
            android:id="@+id/tvActionbarRight"
            style="@style/HomeActionBarComponentText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_btn_new_log2"
            android:textSize="@dimen/textsize_small1"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBarLayout"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <include layout="@layout/layout_risksource_item_top_disable"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/tvHoleCount"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_holeCount"/>

                <EditText
                    android:id="@+id/edtHoleCount"
                    style="@style/CustomLayoutEditText1_disable"
                  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/tvBridgeLength"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_bridgeLength"/>

                <EditText
                    android:id="@+id/edtBridgeLength"
                    style="@style/CustomLayoutEditText1"
                    android:focusable="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/tvMaxPierHeight"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_bridgePierHeight"/>

                <EditText
                    android:id="@+id/edtMaxPierHeight"
                    style="@style/CustomLayoutEditText1"
                    android:focusable="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/tvTopStru"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_topStru"/>

                <EditText
                    android:id="@+id/edtTopStru"
                    style="@style/CustomLayoutEditText1_disable"
                  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/tvBridgeName"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_bridgeName"/>

                <EditText
                    android:id="@+id/edtBridgeName"
                    style="@style/CustomLayoutEditText1_disable"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView

                    android:id="@+id/tvBottomStru"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_bottomStru"/>

                <EditText
                    android:id="@+id/edtBottomStru"
                    style="@style/CustomLayoutEditText1_disable"
                    />

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <TextView
                    android:id="@+id/tvRiskIdentity"
                    style="@style/CustomLayoutLeftText"
                    android:text="@string/string_RiskIdentity"/>

                <EditText
                    android:id="@+id/edtRiskIdentity"
                    style="@style/CustomLayoutEditText1_disable"
                    android:focusable="false"/>

            </LinearLayout>

            <include layout="@layout/layout_risksource_item_bottom_disable"/>

            <include layout="@layout/layout_query_log_btn"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <include layout="@layout/separate_line_h"></include>

        <include layout="@layout/layout_risk_item_bottom"></include>

    </LinearLayout>

</RelativeLayout>