<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/modifyPasswordTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_gradient_color_blue"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@mipmap/ic_back2_32px"
            android:gravity="center"
            android:text="@string/string_back"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_big_plus2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_modifyPassWord"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_big_plus2"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/modifyPasswordMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/shape_circlecorner_white"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtOldPassWord"
                style="@style/ModifyPassWordEditTextStyle"
                android:hint="@string/string_modifyPassWord_Old"/>

            <ImageView
                android:id="@+id/imgvedtOldPassWordClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_activity_login_username_clear1"
                android:visibility="invisible"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtNewPassWord"
                style="@style/ModifyPassWordEditTextStyle"
                android:hint="@string/string_modifyPassWord_New"/>

            <ImageView
                android:id="@+id/imgvedtNewPassWordClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_activity_login_username_clear1"
                android:visibility="invisible"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edtReNewPassWord"
                style="@style/ModifyPassWordEditTextStyle"
                android:hint="@string/string_modifyPassWord_ReNew"/>

            <ImageView
                android:id="@+id/imgvedtReNewPassWordClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_activity_login_username_clear1"
                android:visibility="invisible"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/string_modifyPassWord_hint"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/textsize_big"/>

        <Button
            android:id="@+id/btModifyPassWordOk"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_btn_orange_blue"
            android:text="@string/string_modifyPassWord_Ok"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_big"/>


    </LinearLayout>

</LinearLayout> 